# qubicdb

./: .gitignore  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  Dockerfile.bundled  Dockerfile.vector  README.md  docker-compose.yml  go.mod  go.sum  llms.txt  openapi.yaml  qubicdb.example.yaml
cmd/qubicdb/: main.go
cmd/qubicdb-cli/: main.go  repl.go
patches/linux-local-vector/: README.md  apply.sh
patches/macos-local-vector/: README.md  apply.sh
patches/vector-wrapper/: CMakeLists.txt  README.md  build.ps1  build.sh  llama-go.cpp
patches/windows-local-vector/: README.md  apply.ps1
pkg/api/: mcp_backend.go  mcp_backend_test.go  server.go  server_test.go
pkg/api/apierr/: errors.go  errors_test.go
pkg/concurrency/: benchmark_test.go  brain_worker.go  brain_worker_test.go  operations_test.go  pool.go  pool_test.go
pkg/core/: brain.go  brain_test.go  connstring.go  connstring_test.go  content_validation.go  content_validation_test.go  errors.go  types.go  types_test.go
pkg/daemon/: workers.go  workers_test.go
pkg/e2e/: concurrency_lifecycle_stress_test.go  dogfooding_test.go  durability_test.go  llm_behavior_test.go  multilang_scenario_test.go  organic_test.go  performance_test.go  text_cleaning_e2e_test.go  vector_benchmark_test.go
pkg/engine/: benchmark_test.go  matrix_ops.go  matrix_ops_test.go  search.go  search_test.go
pkg/lifecycle/: manager.go  manager_test.go  state_test.go
pkg/mcp/: server.go
pkg/persistence/: codec.go  codec_test.go  store.go  store_test.go
pkg/protocol/: executor.go  executor_test.go  query.go  query_test.go
pkg/registry/: registry.go
pkg/sentiment/: analyzer.go
pkg/synapse/: hebbian.go  hebbian_test.go
pkg/vector/: loader.go  loader_test.go  loader_unix.go  loader_windows.go  text_cleaner.go  text_cleaner_test.go  vectorizer.go
(+9 files in other folders)
